--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,8 @@ numpy==1.21.4
 scipy==1.7.3
 matplotlib==3.5.0
 webrtcvad==2.0.10
-torch==1.10.0
+torch==1.10.0+cpu
 transformers==4.12.5
 spacy==3.2.0
 gunicorn==20.1.0
-python-dotenv==0.19.2 
+python-dotenv==0.19.2
