--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ scipy==1.7.3
 matplotlib==3.5.0
 webrtcvad==2.0.10
 torch==1.10.0+cpu
+--extra-index-url https://download.pytorch.org/whl/cpu
 transformers==4.12.5
 spacy==3.2.0
 gunicorn==20.1.0
